Removed Location Webpage and included in Measurement

--- a/templates/measurement.html
+++ b/templates/measurement.html
@@ -80,7 +80,16 @@
                 <label for="remark">Remarks</label>
                 <input type="text" name="remark" id="remark">
             </div>
-            
+        </div>
+        <div class="mb-3">
+            <label for="lat_pt">Latitude Point</label>
+            <input type="text" name="lat_pt" id="lat_pt">
+        </div>
+        
+        <div class="mb-3">
+            <label for="long_pt">Longitude Point</label>
+            <input type="text" name="long_pt" id="long_pt">
+        </div>
             
 
             <div>
