Measurement changed to TnD measurement

--- a/templates/tfiber_t&d_measurement.html
+++ b/templates/tfiber_t&d_measurement.html
@@ -10,7 +10,7 @@
 
 
     <div class="form">
-        <form action="/Measurement/{{span_id}}" method="POST">
+        <form action="/TFiber_T&D_Measurement/{{span_id}}" method="POST">
             <div class="mb-3">
                 <label for="ch_from">Chainage from</label>
                 <input type="text" name="ch_from" id="ch_from">
