--- a/templates/project_tfiber_tnd.html
+++ b/templates/project_tfiber_tnd.html
@@ -10,7 +10,7 @@
 
 
     <div class="form">
-        <form action="/Project_Site" method="POST">
+        <form action="/Project_Site_T&D" method="POST">
 
             <div class="mb-3">
                 <label for="msi_name">MSI_Name</label>
