Added all forms

--- a/templates/tfiber_t&d_measurement.html
+++ b/templates/tfiber_t&d_measurement.html
@@ -98,7 +98,7 @@
             
         </form>
         <div>
-            <a href="/" type="button">Submit</a>
+            <a href="/" type="button">Go to Home Page</a>
         </div>
     </div>
     
